# compiler

./: CMakeLists.txt  README.md  notes.txt  todo.txt
res/: context_free.grammar  regexExample.txt  testreg.txt  tokenizer_regex.reg  tokenizer_regex.txt
src/: automata.h  main.cpp
src/automata/: automata.cpp  automata.h  node.cpp  node.h  regex.cpp  regex.h
src/syntax/: CFG.cpp  CFG.h  CFGTree.cpp  CFGTree.h  ast.cpp  ast.h  contextFreeGrammar.cpp  contextFreeGrammar.h  expansion.cpp  expansion.h  treedisplay.cpp  treedisplay.h
src/tokenizer/: automata.cpp  automaton.cpp  automaton.h  node.cpp  regex.cpp  regex.h  token.h  tokenizer.cpp  tokenizer.h
src/util/: util.cpp  util.h
